New CSV for merged Score Data and Genre Data

--- a/Jupyter Notebooks/Machine-Learning/LinearRegression.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/LinearRegression.ipynb
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "56eba2f6",
+   "id": "e96bf56b",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2d77c7d0",
+   "id": "e1b6ad38",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d3255825",
+   "id": "b4eda4da",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c125d223",
+   "id": "ebe7e492",
    "metadata": {},
    "outputs": [
     {
@@ -1081,8 +1081,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9b50efb5",
+   "execution_count": 22,
+   "id": "e5a36bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = \"../../csv_file/Score_Genre.csv\"\n",
+    "Score_Genre_df.to_csv(file_path, index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "95d18331",
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed09b7d",
+   "id": "77f60a40",
    "metadata": {},
    "outputs": [],
    "source": []
