screenshot for README

--- a/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "251959d8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ecb08ae7",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e5ba8542",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2a711b38",
    "metadata": {
     "scrolled": true
@@ -472,223 +472,55 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9411</th>\n",
-       "      <td>31.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9412</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9418</th>\n",
-       "      <td>17.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9419</th>\n",
-       "      <td>42.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9420</th>\n",
-       "      <td>45.0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3588 rows × 26 columns</p>\n",
+       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Hidden_Gem_Score  IMDb_Score  Rotten_Tomatoes_Score  Metacritic_Score  \\\n",
-       "Key                                                                           \n",
-       "5                 16.0        61.0                    8.0              29.0   \n",
-       "6                 25.0        68.0                   36.0              48.0   \n",
-       "8                 36.0        75.0                   81.0              62.0   \n",
-       "15                42.0        83.0                   89.0              78.0   \n",
-       "16                37.0        63.0                   91.0              70.0   \n",
-       "...                ...         ...                    ...               ...   \n",
-       "9411              31.0        65.0                   63.0              61.0   \n",
-       "9412              12.0        44.0                    4.0              26.0   \n",
-       "9418              17.0        52.0                   23.0              24.0   \n",
-       "9419              42.0        85.0                   93.0              75.0   \n",
-       "9420              45.0        82.0                   98.0              92.0   \n",
+       "     Hidden_Gem_Score  IMDb_Score  Rotten_Tomatoes_Score  Metacritic_Score  \\\n",
+       "Key                                                                          \n",
+       "5                16.0        61.0                    8.0              29.0   \n",
+       "6                25.0        68.0                   36.0              48.0   \n",
+       "8                36.0        75.0                   81.0              62.0   \n",
+       "15               42.0        83.0                   89.0              78.0   \n",
+       "16               37.0        63.0                   91.0              70.0   \n",
        "\n",
-       "      ACTION  DRAMA  SCI_FI  THRILLER  MYSTERY  HISTORY  ...  HORROR  \\\n",
-       "Key                                                      ...           \n",
-       "5          0      1       0         1        0        0  ...       0   \n",
-       "6          0      1       0         1        0        1  ...       0   \n",
-       "8          0      1       0         0        0        0  ...       0   \n",
-       "15         0      1       0         1        0        0  ...       0   \n",
-       "16         0      1       0         1        1        0  ...       1   \n",
-       "...      ...    ...     ...       ...      ...      ...  ...     ...   \n",
-       "9411       0      0       0         0        0        0  ...       0   \n",
-       "9412       1      0       1         0        0        0  ...       0   \n",
-       "9418       0      0       1         1        1        0  ...       1   \n",
-       "9419       1      0       1         0        0        0  ...       0   \n",
-       "9420       0      0       0         0        0        0  ...       0   \n",
+       "     ACTION  DRAMA  SCI_FI  THRILLER  MYSTERY  HISTORY  ...  HORROR  \\\n",
+       "Key                                                     ...           \n",
+       "5         0      1       0         1        0        0  ...       0   \n",
+       "6         0      1       0         1        0        1  ...       0   \n",
+       "8         0      1       0         0        0        0  ...       0   \n",
+       "15        0      1       0         1        0        0  ...       0   \n",
+       "16        0      1       0         1        1        0  ...       1   \n",
        "\n",
-       "      DOCUMENTARY  WESTERN  BIOGRAPHY  FAMILY  MUSIC  MUSICAL  FANTASY  WAR  \\\n",
-       "Key                                                                           \n",
-       "5               0        0          0       0      0        0        0    0   \n",
-       "6               0        0          0       0      0        0        0    0   \n",
-       "8               0        0          1       0      0        0        0    0   \n",
-       "15              0        0          0       0      0        0        0    1   \n",
-       "16              0        0          0       0      0        0        0    0   \n",
-       "...           ...      ...        ...     ...    ...      ...      ...  ...   \n",
-       "9411            0        0          0       0      0        0        0    0   \n",
-       "9412            0        0          0       1      0        0        1    0   \n",
-       "9418            0        0          0       0      0        0        0    0   \n",
-       "9419            0        0          0       0      0        0        0    0   \n",
-       "9420            0        0          0       1      0        0        1    0   \n",
+       "     DOCUMENTARY  WESTERN  BIOGRAPHY  FAMILY  MUSIC  MUSICAL  FANTASY  WAR  \\\n",
+       "Key                                                                          \n",
+       "5              0        0          0       0      0        0        0    0   \n",
+       "6              0        0          0       0      0        0        0    0   \n",
+       "8              0        0          1       0      0        0        0    0   \n",
+       "15             0        0          0       0      0        0        0    1   \n",
+       "16             0        0          0       0      0        0        0    0   \n",
        "\n",
-       "      NEWS  \n",
-       "Key         \n",
-       "5        0  \n",
-       "6        0  \n",
-       "8        0  \n",
-       "15       0  \n",
-       "16       0  \n",
-       "...    ...  \n",
-       "9411     0  \n",
-       "9412     0  \n",
-       "9418     0  \n",
-       "9419     0  \n",
-       "9420     0  \n",
+       "     NEWS  \n",
+       "Key        \n",
+       "5       0  \n",
+       "6       0  \n",
+       "8       0  \n",
+       "15      0  \n",
+       "16      0  \n",
        "\n",
-       "[3588 rows x 26 columns]"
+       "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Score_Genre_df.rename(columns = {\"SCI-FI\": \"SCI_FI\"}, inplace = True)\n",
-    "Score_Genre_df"
+    "Score_Genre_df.head()"
    ]
   },
   {
@@ -4661,7 +4493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
