--- a/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrames_by_genre.ipynb
@@ -13,6 +13,7 @@
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.datasets import make_regression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -505,7 +506,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x293761c7c10>"
+       "<matplotlib.collections.PathCollection at 0x1d7ce875d00>"
       ]
      },
      "execution_count": 5,
@@ -536,8 +537,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "1602ddbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "\n",
+    "y = scaler.fit_transform(pd.DataFrame(y))\n",
+    "\n",
+    "X = scaler.fit_transform(pd.DataFrame(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f0c328a2",
    "metadata": {},
    "outputs": [
     {
@@ -546,22 +561,19 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = X.reshape(-1, 1)\n",
-    "y = y.reshape(-1, 1)\n",
-    "\n",
     "model = LinearRegression()\n",
     "model.fit(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "9de6953b",
    "metadata": {},
    "outputs": [
@@ -569,14 +581,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weight coefficients:  [[2.17089258]]\n",
-      "y-axis intercept:  [-85.99657895]\n"
+      "Weight coefficients:  [[0.73948346]]\n",
+      "y-axis intercept:  [5.66613457e-16]\n"
      ]
     }
    ],
    "source": [
     "print('Weight coefficients: ', model.coef_)\n",
     "print('y-axis intercept: ', model.intercept_) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "adec96d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True output: [-0.57445622]\n",
+      "Predicted output: [-0.54002793]\n",
+      "Prediction Error: [0.03442829]\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(X)\n",
+    "print(f\"True output: {y[0]}\")\n",
+    "print(f\"Predicted output: {predictions[0]}\")\n",
+    "print(f\"Prediction Error: {predictions[0]-y[0]}\")"
    ]
   },
   {
