--- a/Jupyter Notebooks/Machine-Learning/DataFrameMerger.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrameMerger.ipynb
@@ -18,6 +18,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f980a7c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install -U scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "8cd7101f",
    "metadata": {},
@@ -1089,6 +1099,14 @@
     "file_path = \"../../csv_file/Score_Genre.csv\"\n",
     "Score_Genre_df.to_csv(file_path, index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73b689de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1107,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
