--- a/Jupyter Notebooks/DB_MS_SQL_Connection.ipynb
+++ b/Jupyter Notebooks/DB_MS_SQL_Connection.ipynb
@@ -37,7 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -18462,7 +18470,78 @@
    "id": "5077e742",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Score_Genre_df = Score_Genre_df.drop(['SHORT WAR', 'REALITY-TV', 'TALK-SHOW', 'GAME-SHOW'], axis=1)\n",
+    "\n",
+    "Score_Genre_df.rename(columns = {\"SCI-FI\": \"SCI_FI\"}, inplace = True)\n",
+    "Score_Genre_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6efea5c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Action\n",
+    "Score_Genre_df_Action = Score_Genre_df.filter(['Hidden_Gem_Score','IMDb_Score','Rotten_Tomatoes_Score','Metacritic_Score', 'ACTION'])\n",
+    "Score_Genre_df_Action = Score_Genre_df_Action[Score_Genre_df_Action['ACTION']!= 0]\n",
+    "Score_Genre_df_Action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5257f01c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set DataFrame to Action columns to lists for best fits\n",
+    "Action_IMDb_list = Score_Genre_df_Action['IMDb_Score'].tolist()\n",
+    "Action_Tomatoes_list = Score_Genre_df_Action['Rotten_Tomatoes_Score'].tolist()\n",
+    "Action_Metacritic_list = Score_Genre_df_Action['Metacritic_Score'].tolist()\n",
+    "Action_Hidden_Gem_list = Score_Genre_df_Action['Hidden_Gem_Score'].tolist()\n",
+    "\n",
+    "# Set said lists to arrays\n",
+    "I = np.array(Action_IMDb_list, dtype=np.float64)\n",
+    "T = np.array(Action_Tomatoes_list, dtype=np.float64)\n",
+    "M = np.array(Action_Metacritic_list, dtype=np.float64)\n",
+    "H = np.array(Action_Hidden_Gem_list, dtype=np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7491f007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMDb vs. Rotten Tomatoes Action\n",
+    "# Create linear regression object\n",
+    "IMDb_Tomatoes_Action = linear_model.LinearRegression()\n",
+    "\n",
+    "# Train the model using the training sets\n",
+    "IMDb_Tomatoes_Action.fit(I.reshape(-1,1),T)\n",
+    "\n",
+    "# Get the regression line using the trained model\n",
+    "regression_line = IMDb_Tomatoes_Action.predict(I.reshape(-1,1))\n",
+    "\n",
+    "# Code for making predictions\n",
+    "#IMDb_score = 30\n",
+    "#Rotten_Tomatoes_Score = IMDb_Tomatoes_Action.predict(np.array([[IMDb_score]]))[0]\n",
+    "\n",
+    "# Commented out code above and below is for making predictions\n",
+    "style.use('seaborn')\n",
+    "plt.scatter(I,T,label='Data Points', alpha=0.6,color='purple',s=75)\n",
+    "#plt.scatter(IMDb_score,Rotten_Tomatoes_Score , label='Rotten Tomatoes Prediction',color='blue',s=100)\n",
+    "plt.plot(I,regression_line,label='Best Fit Line', color='orange',linewidth=4)\n",
+    "plt.title('IMDb vs Rotten Tomatoes for Action Movies')\n",
+    "plt.xlabel('IMDb Score')\n",
+    "plt.ylabel('Rotten Tomatoes Score')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
