regressions connected to DB

--- a/Jupyter Notebooks/DB_MS_SQL_Connection.ipynb
+++ b/Jupyter Notebooks/DB_MS_SQL_Connection.ipynb
@@ -27,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Place these installs into Conda Environment if missing dependencies\n",
     "#!conda install -y -q pymssql\n",
     "#!conda install -c conda-forge matplotlib"
    ]
@@ -18982,7 +18983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
