--- a/Jupyter Notebooks/SQL_Connection_to_Jupyter.ipynb
+++ b/Jupyter Notebooks/SQL_Connection_to_Jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "4311732a",
    "metadata": {},
    "outputs": [],
@@ -13,19 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "b4fbf17e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#DB server info\n",
-    "server = 'lorum'\n",
-    "serverdb = 'ipsum'"
+    "server = 'DESKTOP-KP8L9FA\\SQLEXPRESS'\n",
+    "serverdb = 'Entertainment_Ratings'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "1b0f5ae0",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15176/2628288662.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Create Connection\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mserverConn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpyodbc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'DRIVER={SQL Server};SERVER='\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mserver\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr';DATABASE='\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mserverdb\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr';Trusted_Connection=yes'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3744/2628288662.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Create Connection\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mserverConn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpyodbc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'DRIVER={SQL Server};SERVER='\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mserver\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr';DATABASE='\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mserverdb\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34mr';Trusted_Connection=yes'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mOperationalError\u001b[0m: ('08001', '[08001] [Microsoft][ODBC SQL Server Driver][DBNETLIB]SQL Server does not exist or access denied. (17) (SQLDriverConnect); [08001] [Microsoft][ODBC SQL Server Driver][DBNETLIB]ConnectionOpen (Connect()). (53)')"
      ]
     }
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "sqlDf = pd.read_sql(msSql, serverConn)\n",
-    "df.head()"
+    "sqlDF.head()"
    ]
   },
   {
