deleted box office file, will get from database instead

--- a/Jupyter Notebooks/Machine-Learning/DataFrameMerger.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrameMerger.ipynb
@@ -102,17 +102,87 @@
        "      <td>91.0</td>\n",
        "      <td>70.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3583</th>\n",
+       "      <td>9411</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3584</th>\n",
+       "      <td>9412</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3585</th>\n",
+       "      <td>9418</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3586</th>\n",
+       "      <td>9419</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3587</th>\n",
+       "      <td>9420</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>92.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3588 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Key  Hidden Gem Score  IMDb Score  Rotten Tomatoes Score  Metacritic Score\n",
-       "0    5               1.6         6.1                    8.0              29.0\n",
-       "1    6               2.5         6.8                   36.0              48.0\n",
-       "2    8               3.6         7.5                   81.0              62.0\n",
-       "3   15               4.2         8.3                   89.0              78.0\n",
-       "4   16               3.7         6.3                   91.0              70.0"
+       "       Key  Hidden Gem Score  IMDb Score  Rotten Tomatoes Score  \\\n",
+       "0        5               1.6         6.1                    8.0   \n",
+       "1        6               2.5         6.8                   36.0   \n",
+       "2        8               3.6         7.5                   81.0   \n",
+       "3       15               4.2         8.3                   89.0   \n",
+       "4       16               3.7         6.3                   91.0   \n",
+       "...    ...               ...         ...                    ...   \n",
+       "3583  9411               3.1         6.5                   63.0   \n",
+       "3584  9412               1.2         4.4                    4.0   \n",
+       "3585  9418               1.7         5.2                   23.0   \n",
+       "3586  9419               4.2         8.5                   93.0   \n",
+       "3587  9420               4.5         8.2                   98.0   \n",
+       "\n",
+       "      Metacritic Score  \n",
+       "0                 29.0  \n",
+       "1                 48.0  \n",
+       "2                 62.0  \n",
+       "3                 78.0  \n",
+       "4                 70.0  \n",
+       "...                ...  \n",
+       "3583              61.0  \n",
+       "3584              26.0  \n",
+       "3585              24.0  \n",
+       "3586              75.0  \n",
+       "3587              92.0  \n",
+       "\n",
+       "[3588 rows x 5 columns]"
       ]
      },
      "execution_count": 3,
@@ -121,7 +191,7 @@
     }
    ],
    "source": [
-    "Score_df.head()"
+    "Score_df"
    ]
   },
   {
@@ -295,34 +365,196 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9420</th>\n",
+       "      <td>9421</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9421</th>\n",
+       "      <td>9422</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9422</th>\n",
+       "      <td>9423</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9423</th>\n",
+       "      <td>9424</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9424</th>\n",
+       "      <td>9425</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
+       "<p>9425 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Key  ACTION  DRAMA  SCI-FI  THRILLER  MYSTERY  HISTORY  SHORT WAR  CRIME  \\\n",
-       "0    1       1      1       1         1        0        0          0      0   \n",
-       "1    2       0      1       1         1        1        0          0      0   \n",
-       "2    3       0      1       0         0        0        1          0      0   \n",
-       "3    4       0      0       0         0        0        0          0      0   \n",
-       "4    5       0      1       0         1        0        0          0      1   \n",
+       "       Key  ACTION  DRAMA  SCI-FI  THRILLER  MYSTERY  HISTORY  SHORT WAR  \\\n",
+       "0        1       1      1       1         1        0        0          0   \n",
+       "1        2       0      1       1         1        1        0          0   \n",
+       "2        3       0      1       0         0        0        1          0   \n",
+       "3        4       0      0       0         0        0        0          0   \n",
+       "4        5       0      1       0         1        0        0          0   \n",
+       "...    ...     ...    ...     ...       ...      ...      ...        ...   \n",
+       "9420  9421       0      1       0         0        0        0          0   \n",
+       "9421  9422       1      0       0         0        0        0          0   \n",
+       "9422  9423       0      0       0         0        0        0          0   \n",
+       "9423  9424       0      0       0         0        0        0          0   \n",
+       "9424  9425       0      0       0         0        0        0          0   \n",
        "\n",
-       "   ADVENTURE  ...  BIOGRAPHY  FAMILY  MUSIC  MUSICAL  FANTASY  REALITY-TV  \\\n",
-       "0          0  ...          0       0      0        0        0           0   \n",
-       "1          0  ...          0       0      0        0        0           0   \n",
-       "2          0  ...          0       0      0        0        0           0   \n",
-       "3          0  ...          0       0      0        0        0           0   \n",
-       "4          0  ...          0       0      0        0        0           0   \n",
+       "      CRIME  ADVENTURE  ...  BIOGRAPHY  FAMILY  MUSIC  MUSICAL  FANTASY  \\\n",
+       "0         0          0  ...          0       0      0        0        0   \n",
+       "1         0          0  ...          0       0      0        0        0   \n",
+       "2         0          0  ...          0       0      0        0        0   \n",
+       "3         0          0  ...          0       0      0        0        0   \n",
+       "4         1          0  ...          0       0      0        0        0   \n",
+       "...     ...        ...  ...        ...     ...    ...      ...      ...   \n",
+       "9420      0          0  ...          0       1      0        0        0   \n",
+       "9421      0          1  ...          0       0      0        0        1   \n",
+       "9422      0          0  ...          0       0      1        0        0   \n",
+       "9423      0          0  ...          0       0      0        0        1   \n",
+       "9424      0          0  ...          0       0      0        0        0   \n",
        "\n",
-       "   WAR  NEWS  TALK-SHOW  GAME-SHOW  \n",
-       "0    0     0          0          0  \n",
-       "1    0     0          0          0  \n",
-       "2    0     0          0          0  \n",
-       "3    1     0          0          0  \n",
-       "4    0     0          0          0  \n",
+       "      REALITY-TV  WAR  NEWS  TALK-SHOW  GAME-SHOW  \n",
+       "0              0    0     0          0          0  \n",
+       "1              0    0     0          0          0  \n",
+       "2              0    0     0          0          0  \n",
+       "3              0    1     0          0          0  \n",
+       "4              0    0     0          0          0  \n",
+       "...          ...  ...   ...        ...        ...  \n",
+       "9420           0    0     0          0          0  \n",
+       "9421           0    0     0          0          0  \n",
+       "9422           0    0     0          0          0  \n",
+       "9423           0    0     0          0          0  \n",
+       "9424           0    0     0          0          0  \n",
        "\n",
-       "[5 rows x 27 columns]"
+       "[9425 rows x 27 columns]"
       ]
      },
      "execution_count": 4,
@@ -331,7 +563,7 @@
     }
    ],
    "source": [
-    "Genre_df.head()"
+    "Genre_df"
    ]
   },
   {
@@ -1107,7 +1339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
