readying box office for new CSV

--- a/Jupyter Notebooks/Machine-Learning/DataFrameMerger.ipynb
+++ b/Jupyter Notebooks/Machine-Learning/DataFrameMerger.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "25c31565",
    "metadata": {},
    "outputs": [],
@@ -18,18 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "8cd7101f",
    "metadata": {},
    "outputs": [],
    "source": [
     "Score_df = pd.read_csv(\"../../csv_file/Netflix_data_ML.csv\")\n",
-    "Genre_df = pd.read_csv(\"../../csv_file/Netflix_Dataset_Genre_Type.csv\")"
+    "Genre_df = pd.read_csv(\"../../csv_file/Netflix_Dataset_Genre_Type.csv\")\n",
+    "Box_Office_df = pd.read_csv(\"../../csv_file/key_Boxoffice.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "cdcca238",
    "metadata": {},
    "outputs": [
@@ -185,7 +186,7 @@
        "[3588 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "e96bf56b",
    "metadata": {},
    "outputs": [
@@ -557,7 +558,7 @@
        "[9425 rows x 27 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +569,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
+   "id": "6c573561",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Key</th>\n",
+       "      <th>Box_Office</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>$-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>$422.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>$-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>$-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>$-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9348</th>\n",
+       "      <td>9421</td>\n",
+       "      <td>$-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9349</th>\n",
+       "      <td>9422</td>\n",
+       "      <td>$519,461.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9350</th>\n",
+       "      <td>9423</td>\n",
+       "      <td>$-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9351</th>\n",
+       "      <td>9424</td>\n",
+       "      <td>$-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9352</th>\n",
+       "      <td>9425</td>\n",
+       "      <td>$248,286.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9353 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Key    Box_Office \n",
+       "0        1          $-   \n",
+       "1        2       $422.00 \n",
+       "2        3          $-   \n",
+       "3        4          $-   \n",
+       "4        5          $-   \n",
+       "...    ...            ...\n",
+       "9348  9421          $-   \n",
+       "9349  9422   $519,461.00 \n",
+       "9350  9423          $-   \n",
+       "9351  9424          $-   \n",
+       "9352  9425   $248,286.00 \n",
+       "\n",
+       "[9353 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Box_Office_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "e1b6ad38",
    "metadata": {},
    "outputs": [
@@ -802,7 +921,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "b4eda4da",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1168,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "ebe7e492",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1419,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "e5a36bc2",
    "metadata": {},
    "outputs": [],
